[package]
name = "turbo-tasks-build"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
cargo-lock = "8.0.2"
glob = "0.3.0"
syn = { workspace = true, features = ["full"] }
turbo-tasks-macros-shared = { workspace = true }
