[package]
name = "turbo-tasks-env"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
dotenvy = "0.15.5"
indexmap = "1.8.0"
serde = "1.0.136"
serde_json = "1.0.85"
tokio = "1.11.0"
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
