[package]
name = "turbo-tasks-env"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = "1.0.47"
dotenvy = "0.15.5"
indexmap = { workspace = true, features = ["serde"] }
serde = "1.0.136"
serde_json = "1.0.85"
tokio = "1.11.0"
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
