[package]
name = "turbo-tasks-env"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
dotenvy = "0.15.5"
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
