[package]
name = "turbo-tasks-fs"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "mod"
harness = false

[dependencies]
anyhow = { workspace = true }
auto-hash-map = { workspace = true }
bitflags = "1.3.2"
bytes = "1.1.0"
concurrent-queue = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
futures-retry = { workspace = true }
include_dir = { version = "0.7.2", features = ["nightly"] }
jsonc-parser = { version = "0.21.0", features = ["serde"] }
mime = { workspace = true }
notify = "4.0.17"
parking_lot = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_path_to_error = "0.1.9"
tokio = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rstest = { workspace = true }
sha2 = "0.10.2"
tempfile = { workspace = true }
turbo-tasks-memory = { path = "../turbo-tasks-memory" }

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
