[package]
name = "turbo-tasks-hash"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
md4 = "0.10.1"
turbo-tasks-macros = { path = "../turbo-tasks-macros" }
twox-hash = "1.6.3"
