[package]
name = "turbo-tasks-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
pmutil = "0.5.3"
proc-macro2 = "1.0.36"
quote = "1.0"
convert_case = "0.5.0"

[dependencies.syn]
features = ["full"]
version = "1.0"
