[package]
name = "turbo-tasks-macros"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true
bench = false

[dependencies]
anyhow = "1.0.53"
convert_case = "0.5.0"
pmutil = "0.5.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0"
turbo-tasks-macros-shared = { path = "../turbo-tasks-macros-shared" }

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1.0"
