[package]
name = "turbo-tasks-memory-cache"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.47"
"turbo-tasks" = { path = "../turbo-tasks" }
event-listener = "2.5.2"
async-std = "1.10.0"
flurry = "0.4.0"
